--- a/src/button/style.scss
+++ b/src/button/style.scss
@@ -16,5 +16,5 @@
 	margin: 1em!important;
   }
   
-   @import '../../node_modules/ucla-bruin-components/public/css/ucla-lib.min.css';
-  
+/*    @import '../../node_modules/ucla-bruin-components/public/css/ucla-lib.min.css';
+ */  
