--- a/src/button/style.scss
+++ b/src/button/style.scss
@@ -44,5 +44,10 @@ a.btn--tertiary.play::before {
     background: url(/wp-content/themes/ucla-sc/images/icons/play-defaultblue.svg);
     background-size: contain
 }
+
+.blade-links .blade-links__box-link {
+    color: #fff!important;
+}
+
 /*    @import '../../node_modules/ucla-bruin-components/public/css/ucla-lib.min.css';
  */
