--- a/src/button/style.scss
+++ b/src/button/style.scss
@@ -6,7 +6,7 @@
  */
 
 .wp-block-uwai-uwai {
-	background-color: var( --wp-admin-theme-color );
+	background-color: var(--wp-admin-theme-color);
 	color: #fff;
 	padding: 2px;
 }
@@ -26,25 +26,30 @@ a.btn.play::before {
 }
 
 a.btn--secondary.play:hover::before {
-    background: url(/wp-content/themes/ucla-sc/images/icons/play-white.svg);
-    background-size: contain
+	background: url(/wp-content/themes/ucla-sc/images/icons/play-white.svg);
+	background-size: contain;
 }
 
 a.btn--secondary.play::before {
-    background: url(/wp-content/themes/ucla-sc/images/icons/play-defaultblue.svg);
-    background-size: contain
+	background: url(/wp-content/themes/ucla-sc/images/icons/play-defaultblue.svg);
+	background-size: contain;
 }
 
 a.btn--tertiary.play:hover::before {
-    background: url(/wp-content/themes/ucla-sc/images/icons/play-white.svg);
-    background-size: contain
+	background: url(/wp-content/themes/ucla-sc/images/icons/play-white.svg);
+	background-size: contain;
 }
-   
+
 a.btn--tertiary.play::before {
-    background: url(/wp-content/themes/ucla-sc/images/icons/play-defaultblue.svg);
-    background-size: contain
+	background: url(/wp-content/themes/ucla-sc/images/icons/play-defaultblue.svg);
+	background-size: contain;
 }
 
 .blade-links .blade-links__box-link {
-    color: #fff!important;
+	color: #fff !important;
+}
+
+.btn--lightbg {
+	background: #00598c;
+	color: #fff !important;
 }
