--- a/src/carousel/style.scss
+++ b/src/carousel/style.scss
@@ -59,7 +59,8 @@
 	visibility: visible !important;
 }
 .splide-image {
-	width: auto;
+	width: 100%;
+	height: 100%;
 	// object-fit: cover;
 	// height: 600px;
 }
@@ -69,6 +70,25 @@
 	padding: 8px;
 	max-width: 360px;
 }
+
+.splide__slide {
+	height: fit-content !important;
+}
+
+.thumbnail-images {
+	width: 100px;
+	height: 60px;
+	margin-right: 10px;
+}
+
+.splide__slide {
+  opacity: 0.3;
+}
+
+.splide__slide.is-active {
+  opacity: 1;
+}
+
 // .splide__arrow {
 // 	height: 50px !important;
 // 	margin-top: 250px !important;
@@ -92,6 +112,7 @@
 	cursor: pointer;
 	background-color: rgba(0, 0, 0, 0.7);
 	border-radius: 50%;
+	margin-left: 20px;
 }
 
 // Caption sizes
@@ -107,28 +128,34 @@
 
 // Caption locations
 .caption-top-left {
-	top: -600px;
-	left: 20px;
+	bottom: 520px;
+	margin-left: 20px;
+	margin-right: auto;
 }
 .caption-top-center {
-	top: -600px;
-	left: 20px;
+	bottom: 520px;
+	text-align: center;
+	margin: 0 auto;
 }
 .caption-top-right {
-	top: -600px;
-	right: 20px;
+	bottom: 520px;
+	margin-left: auto;
+	margin-right: 20px;
 }
 .caption-bottom-left {
-	// top: -130px;
-	left: 20px;
+	bottom: 50px;
+	margin-left: 20px;
+	margin-right: auto;
 }
 .caption-bottom-center {
-	// top: -130px;
-	left: 20px;
+	bottom: 50px;
+	text-align: center;
+	margin: 0 auto;
 }
 .caption-bottom-right {
-	// top: -130px;
-	right: 20px;
+	bottom: 50px;
+	margin-left: auto;
+	margin-right: 20px;
 }
 
 // Caption colors
