--- a/src/carousel/style.scss
+++ b/src/carousel/style.scss
@@ -10,11 +10,11 @@
 	padding: 2px;
 }
 
-.splide-image-container {
-	object-fit: cover !important;
-	max-height: calc(100vh - 200px) !important;
-	aspect-ratio: auto 2732 / 1279;
-}
+// .splide-image-container {
+// 	object-fit: cover !important;
+// 	max-height: calc(100vh - 200px) !important;
+// 	aspect-ratio: auto 2732 / 1279;
+// }
 
 .blade-links {
 	margin: 1em!important;
@@ -59,9 +59,9 @@
 	visibility: visible !important;
 }
 .splide-image {
-	width: 100%;
-	height: 100%;
-	// object-fit: cover;
+	width: 100vw;
+	height: 60vh;
+	object-fit: cover;
 	// height: 600px;
 }
 .splide-caption {
@@ -71,23 +71,26 @@
 	max-width: 360px;
 }
 
-.splide__slide {
-	height: fit-content !important;
-}
-
 .thumbnail-images {
 	width: 100px;
 	height: 60px;
 	margin-right: 10px;
 }
 
-.splide__slide {
-  opacity: 0.3;
-}
+// .splide__slide {
+//   opacity: 0.3;
+// }
 
 .splide__slide.is-active {
   opacity: 1;
 }
+
+// .image-contain {
+// 	object-fit: contain;
+// }
+// .background-fade {
+// 	color: rgba(0, 0, 0, 0.7);
+// }
 
 // .splide__arrow {
 // 	height: 50px !important;
@@ -128,35 +131,75 @@
 
 // Caption locations
 .caption-top-left {
-	bottom: 520px;
+	left: 0px;
 	margin-left: 20px;
 	margin-right: auto;
+	position: absolute;
+	display: inline-block;
 }
 .caption-top-center {
-	bottom: 520px;
+	left: 0px;
 	text-align: center;
 	margin: 0 auto;
+	position: absolute;
+	display: inline-block;
 }
 .caption-top-right {
-	bottom: 520px;
+	left: 0px;
 	margin-left: auto;
 	margin-right: 20px;
+	position: absolute;
+	display: inline-block;
 }
 .caption-bottom-left {
-	bottom: 50px;
+	bottom: 20vh;
 	margin-left: 20px;
 	margin-right: auto;
 }
 .caption-bottom-center {
-	bottom: 50px;
+	bottom: 20vh;
 	text-align: center;
 	margin: 0 auto;
 }
 .caption-bottom-right {
-	bottom: 50px;
+	bottom: 20vh;
 	margin-left: auto;
 	margin-right: 20px;
 }
+
+// Arrows
+.arrows-either-side {
+	z-index: 3;
+	position: absolute;
+	display: inline-block;
+	margin-top: 35vh !important;
+	margin-right: 15px !important;
+	margin-left: 15px !important;
+}
+
+.arrows-either-side-right {
+	right: 0px;
+}
+
+
+// Pagination
+.pagination-below {
+	margin-top: 10px !important;
+	position: absolute;
+	padding: 5px !important;
+	margin-left: 45vw !important;
+	width: fit-content !important;
+}
+.pagination-internal {
+	margin-top: -40px !important;
+	position: absolute;
+	background-color: rgb(0, 0, 0, 0.5);
+	border-radius: 20px;
+	padding: 5px !important;
+	margin-left: 45vw !important;
+	width: fit-content !important;
+}
+
 
 // Caption colors
 .caption-blue-on-yellow {
