--- a/src/carousel/editor.scss
+++ b/src/carousel/editor.scss
@@ -1,5 +1,12 @@
-.splide-image {
-	// width: 90vw !important;
-	// object-fit: cover;
-	// height: 600px;
+.caption-bottom-left {
+	bottom: 40vh !important;
+}
+.caption-bottom-center {
+	bottom: 40vh !important;
+}
+.caption-bottom-right {
+	bottom: 40vh !important;
+}
+.pagination-below {
+	margin-left: 45% !important;
 }
