block alignment in editor

--- a/src/recent-posts/editor.scss
+++ b/src/recent-posts/editor.scss
@@ -8,4 +8,24 @@
 	margin: 0 0 1rem;
 	font-size: 1.5rem;
 }
+
+.wp-block-uwai-recent-posts {
+	display: flex;
+	flex-direction: row;
+}
+
+.wp-block-uwai-recent-posts.left {
+	flex-direction: column;
+	float: left;
+}
+
+.wp-block-uwai-recent-posts.right {
+	flex-direction: column;
+	float: right;
+}
+
+.wp-block-uwai-recent-posts.center {
+	flex-direction: row;
+	justify-content: center;
+}
   
