--- a/src/recent-posts/style.scss
+++ b/src/recent-posts/style.scss
@@ -15,4 +15,22 @@
 	margin: 1em!important;
   }
   
+  .uwai-recent-post {
+	display: flex;
+	flex-direction: row;
+  }
   
+  .uwai-recent-post.right {
+	flex-direction: column;
+	float: right;
+  }
+
+  .uwai-recent-post.left {
+	flex-direction: column;
+	float: left;
+  }
+
+  .uwai-recent-post.center {
+	flex-direction: row;
+	justify-content: center;
+  }
