--- a/src/recent-posts/editor.scss
+++ b/src/recent-posts/editor.scss
@@ -16,16 +16,26 @@
 
 .wp-block-uwai-recent-posts.left {
 	flex-direction: column;
-	float: left;
+	align-items: flex-start;
 }
 
 .wp-block-uwai-recent-posts.right {
 	flex-direction: column;
-	float: right;
+	align-items: flex-end;
 }
 
 .wp-block-uwai-recent-posts.center {
 	flex-direction: row;
 	justify-content: center;
+}
+
+.wp-block-uwai-recent-posts.wide {
+	flex-direction: row;
+	justify-content: space-between;
+}
+
+.wp-block-uwai-recent-posts.full {
+	flex-direction: row;
+	justify-content: space-around;
 }
   
