--- a/src/event-card/style.scss
+++ b/src/event-card/style.scss
@@ -4,15 +4,119 @@
  *
  * Replace them with your own styles or remove the file completely.
  */
-.wp-block-uwai-uwai {
-	background-color: var(--wp-admin-theme-color);
-	color: #fff;
-	padding: 2px;
+ 
+.events-archive {
+	.event {
+		border-top: 1px solid #e5e5e5;
+		padding: 1rem;
+		display: flex;
+		flex-wrap: wrap;
+
+		@media (min-width: 768px) {
+			flex-wrap: nowrap;
+		}
+
+		.event-content {
+			width: 100%;
+		}
+
+		.event-img-wrapper {
+			width: 100%;
+
+			@media (min-width: 768px) {
+				width: 32.26%;
+				margin-right: 1.6%;
+			}
+
+			.event-featured-img {
+				max-width: 100%;
+				height: auto;
+			}
+		}
+
+		.event-title {
+			margin-bottom:0;
+
+			a {
+				color: #00598C;
+				text-decoration: none;
+
+				&:active, &:visited {
+					color: #00598C;
+				}
+				&:hover {
+					color: white;
+				}
+			}
+		}
+
+		&:last-of-type {
+			border-bottom: 1px solid #e5e5e5;
+		}
+		.event-info {
+			margin-bottom: 1rem;
+			color: #666;
+			font-size: 0.75rem;
+			font-weight: bold;
+			justify-content: space-between;
+
+			@media (min-width: 576px) {
+				justify-content: flex-start;
+			}
+
+			&> div {
+				margin-right: 0;
+
+				@media (min-width: 768px) {
+					margin-right: 1rem;
+				}
+			}
+		}
+		.event-info, .event-start-date, .event-time, .event-location {
+			display: flex;
+			align-items: center;
+		}
+
+		.event-start-date, .event-time, .event-location {
+			svg {
+				width: 1rem;
+				height: 1rem;
+				margin-right: 6px;
+			}
+		}
+	}
 }
 
-  
-  .blade-links {
-	margin: 1em!important;
-  }
-  
-  
+.event-page {
+	.event-info {
+		margin-bottom: 1rem;
+		color: #666;
+		font-size: 0.75rem;
+		font-weight: bold;
+		justify-content: space-between;
+
+		@media (min-width: 576px) {
+			justify-content: flex-start;
+		}
+
+		&> div {
+			margin-right: 0;
+
+			@media (min-width: 768px) {
+				margin-right: 1rem;
+			}
+		}
+	}
+	.event-info, .event-start-date, .event-time, .event-location {
+		display: flex;
+		align-items: center;
+	}
+
+	.event-start-date, .event-time, .event-location {
+		svg {
+			width: 1rem;
+			height: 1rem;
+			margin-right: 6px;
+		}
+	}
+}
