--- a/src/hero/style.scss
+++ b/src/hero/style.scss
@@ -5,7 +5,7 @@
  * Replace them with your own styles or remove the file completely.
  */
 
-.screenreader-helper {
+ .screenreader-helper {
 	color: transparent;
 	user-select: none;
 }
@@ -283,7 +283,7 @@
 	  padding-left: 0;
 	}
   }
-  
+
   section#hero .copy__headline {
 	margin-bottom: 26px;
 	font-size: 2rem;
@@ -535,4 +535,17 @@
 	}
   }
   
-  
+  section#hero #hero-heading{
+	overflow: visible; 
+	&:before{
+		content: "";
+		width: 135px;
+		height: 135px;
+		display: block;
+		margin: -60px 0 0 -60px;
+		position: absolute;
+		z-index: -1;
+		background-image:url(../../assets/molecule.svg);
+		background-size: cover;
+	}
+}
