add num of events to preview page, minor styling changes

--- a/src/event-card/editor.scss
+++ b/src/event-card/editor.scss
@@ -28,6 +28,10 @@
 					padding-top: 0;
 				}
 			}
+			
+			.event-card-info__number {
+				margin-left: 0.3rem;
+			}
 		}
 
 		.event-card-info__time, .event-card-info__location {
