--- a/src/event-card/style.scss
+++ b/src/event-card/style.scss
@@ -134,6 +134,24 @@
 	flex-wrap: wrap;
 
 	.event-card-info {
+		.event-card-info__date {
+			line-height: 1;
+			height: 35px;
+
+			.small-block {
+				margin-top: 0;
+				line-height: 1.3;
+
+				.event-card-info__month {
+					padding-top: 0;
+				}
+			}
+
+			.event-card-info__number {
+				margin-left: 0.3rem;
+			}
+		}
+
 		.event-card-info__time, .event-card-info__location {
 			display: block;
 		}
