--- a/src/ribbon/editor.scss
+++ b/src/ribbon/editor.scss
@@ -6,9 +6,15 @@
         line-height: 1.4;
     }
 
-    .has-molecule {
-        z-index: 1;
+    &.ribbon--highlight {
+
+        h1,h2,h3,h4,h5,h6 {
+        font-size: 1.5rem;
+        font-weight: bold;
+        line-height: 2;
+        }
     }
+}
 
     // &.has-molecule::before {
     //     content: '';
@@ -16,4 +22,3 @@
     //     width: 135px;
     //     height: 135px;
     // }
-}
