start full width story card

--- a/src/hero/editor.scss
+++ b/src/hero/editor.scss
@@ -610,7 +610,7 @@
 // .block-editor-block-list__layout {
 // 	overflow-x: hidden;
 // }
-.editor-styles-wrapper .block-editor-block-list__layout.is-root-container .block-editor-block-list__block.hero-banner.full-width {
+.editor-styles-wrapper .block-editor-block-list__layout.is-root-container .block-editor-block-list__block.full-width {
 	max-width: 100%;
 }
 
