fix full width featured story

--- a/src/hero/style.scss
+++ b/src/hero/style.scss
@@ -24,11 +24,25 @@
 }
 
 .story {
-	&.full-width .story__featured-image {
-		@media (min-width: 1024px) {
-			position: absolute;
-			left: 50%;
+	&.full-width {
+
+		@media (max-width: 1023px) {
 			width: 100vw;
+			position: relative;
+			left: 50%;
+			right: 50%;
+			margin-left: -50vw;
+			margin-right: -50vw;
+			padding: 0;
+		}
+
+		.story__featured-image {
+		
+
+			@media (min-width: 1024px) {
+				position: absolute;
+				left: 50%;
+			}
 		}
 	}
 	&> .story__featured {
