--- a/src/hero/style.scss
+++ b/src/hero/style.scss
@@ -62,7 +62,7 @@
 		.story__featured-image {
 			width: 75%;
 			height: auto;
-			min-height: 540px;
+			max-height: 540px;
 			object-fit: cover;
 		}
 
