--- a/src/event-card/editor.scss
+++ b/src/event-card/editor.scss
@@ -16,36 +16,44 @@
 	.event-card-info {
 		
 		
-		& > .event-card-info__date {
-			line-height: 1;
-			height: 35px;
+		// & > .event-card-info__date {
+		// 	line-height: 1;
+		// 	height: 35px;
 
-			.small-block {
-				margin-top: 0;
-				line-height: 1.3;
+		// 	.small-block {
+		// 		margin-top: 0;
+		// 		line-height: 1.3;
 
-				& > .event-card-info__month {
-					padding-top: 0;
-				}
-			}
+		// 		& > .event-card-info__month {
+		// 			padding-top: 0;
+		// 		}
+		// 	}
 			
-			.event-card-info__number {
-				margin-left: 0.3rem;
-			}
-		}
+		// 	.event-card-info__number {
+		// 		margin-left: 0.3rem;
+		// 	}
+		// }
 
 		.event-card-info__time, .event-card-info__location {
-			display: block;
-		}
-
-		.event-card-icon__time ,.event-card-icon__location {
-			display: inline-block;
-			vertical-align: baseline;
+			display: flex;
+			align-items: center;
 		}
 	}
 
 	.event-card__title {
 		font-size: 1.25rem;
+	}
+
+	.event-card {
+		.event-card__date {
+			padding: 16px 24px 16px;
+		}
+		&.upcoming-event .event-card__date-info {
+			background-color: #FFD100;
+		}
+		&.past-event .event-card__date-info {
+			background-color: #D9D9D9;
+		}
 	}
  }
   
